# sts-x

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v3.0.0.md  build.rs  index.html  sts-x-promo-v3.html
.cargo/: config.toml
assets/: icon.icns
plans/: STS-X-v3.1-UPGRADE-BLUEPRINT.md  STS-X-v3.1-UPGRADE-PROMPT.md
scripts/: acceptance_s8.py  build.sh  download-models.sh
src/: cache.rs  lib.rs  main.rs  postprocess.rs
src/chunker/: mod.rs
src/cli/: mod.rs
src/embed/: mod.rs
src/filesearch/: mod.rs
src/indexer/: mod.rs
src/search/: mod.rs
src/server/: mod.rs
src/types/: format.rs  mod.rs
sts-x-win 版发布包/: 使用说明书.txt
