[package]
name = "sts-x"
version = "3.1.1"
edition = "2021"
description = "STS-X 3.0: 为 AI Agent 而生的统一代码+文件搜索引擎 — AST 切块 + BM25 + locate/expand 输出模式 + 零索引 file 搜索 + MCP，单二进制零依赖"
authors = ["星TAP实验室软件 <cscb603@qq.com>"]
homepage = "https://github.com/cscb603/sts-x"
repository = "https://github.com/cscb603/sts-x"
license = "MIT"
keywords = ["code-search", "ast", "bm25", "mcp", "ai-search-engine", "file-search"]
categories = ["command-line-utilities", "development-tools", "search"]
readme = "README.md"

[features]
default = []
semantic = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Async & HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# AST chunking
tree-sitter = "=0.21.0"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-go = "0.21"
# New languages (v3.1)
tree-sitter-php = "0.22"
tree-sitter-ruby = "0.21"
tree-sitter-scala = "0.21.0"
devgen-tree-sitter-swift = "0.21.0"
ignore = "0.4"

# Path diff
pathdiff = "0.2"

# Encoding fallback for CJK (GBK/GB18030/Big5) on Windows
encoding_rs = "0.8"

# System directories
dirs = "5"

# Full-text search
tantivy = "0.22"

# ONNX inference (optional — for semantic search)
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "sts_x"
path = "src/lib.rs"

[[bin]]
name = "sts-x"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
